# Pac-man

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Ghost.cpp  Ghost.h  LICENSE  Maze.cpp  Maze.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  README.md  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  build.bat  main.cpp
shaders/: particle.fs  particle.vs  sprite.fs
